[package]
name = "iroh-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bincode = "2.0.1"
blake3 = "1.8.2"
futures = "0.3.31"
iroh = "0.95"
n0-error = { version = "0.1.2", features = ["anyhow"] }
n0-future = "0.3.1"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.48.0"
walkdir = "2.5.0"
